--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /FightingGame/[Ll]ogs/
 /FightingGame/[Uu]ser[Ss]ettings/
 
+/FightingGame/obj/
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /FightingGame/[Mm]emoryCaptures/
